--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 	<div>	
 		<div class="header">
 			<div class="same">
-				<div class="">
+				<div class="iii">
 					<img class="img1" src="/sl4.jpg">
 				</div>
 			</div>
